(refactor) Change naming from glint to congress
Changes tagline and subtext

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Glint</title>
+  <title>CONGRE$$</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -18,13 +18,13 @@
       <ul class="nav navbar-nav navbar-left">
         <li class="nav-logo">
           <a class="glint-logo-icon" href="#/"><img src="assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
-        <li class="tagline">Where programmers meet ideas</li>
+        <li class="tagline">'Free $peech'</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       
         <!-- <li><a href="#">User</a></li> -->
-        <!-- <li><a href="#">Messages</a></li> -->
-        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
+<!--         <li><a href="#">Messages</a></li>
+ -->        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
       </ul>
