--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -1,5 +1,5 @@
 <div class="jumbotron jumbo-top">
-  <h1 class="animated fadeInUp">What's your great idea?</h1>
+  <h1 class="animated fadeInUp">Buy up votes</h1>
   <form class="navbar-form navbar-middle" ng-submit="ictrl.submitIdea()">
 
     <!-- Enter Idea -->
