(refactor) prepare infrastructure to run board views
glint.js:
  - add glint.boards dependency
  - default route to boards

index.html:
  - remove ideas controller

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-app="glint" ng-controller="IdeasCtrl as ictrl">
+<body ng-app="glint">
   <nav class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
@@ -40,6 +40,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
   <script src="app/glint.js"></script>
   <script src="common/services.js"></script>
+  <script src="app/boards/boards.js"></script>
   <script src="app/ideas/ideas.js"></script>
   <script src="app/votes/votes.js"></script>
   <script src="app/auth/auth.js"></script>
