--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -1,15 +1,15 @@
-<div class="jumbotron jumbo-top">
-  <h1 class="animated fadeInUp">"Free" $peeech</h1>
-  <form class="navbar-form navbar-middle" ng-submit="ictrl.submitIdea()">
+<div class="jumbotron jumbo-top" ng-controller="BoardsCtrl as ictrl">
+  <h1 class="animated fadeInUp">Freedom isn't free</h1>
+  <form class="navbar-form navbar-middle" ng-submit="ictrl.submitBoard()">
 
-    <!-- Enter Idea -->
+    <!-- Enter Board -->
     <div class="form-idea animated fadeInUp">
-      <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter idea here" ng-model="ictrl.idea.title" required>
+      <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter topic here" ng-model="ictrl.board.boardName" required>
     </div>
     
     <!-- Enter Description -->
     <div ng-if="ictrl.submitted" class="form-description ng-cloak">
-      <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter description here" ng-model="ictrl.idea.text"></textarea>
+      <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter caption here" ng-model="ictrl.board.caption"></textarea>
     </div>
 
     <button type="submit" class="btn btn-default idea-submit-button animated fadeInUp">Submit</button>
@@ -21,8 +21,8 @@
   <span class="post-idea-success">Your idea has been posted.</span>
 </div>
 
-<!-- Idea Row -->
-<div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="idea in ictrl.data.ideas track by idea._id"> 
+<!-- Board Row -->
+<div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="board in ictrl.data.boards track by board._id"> 
   <div class="col-md-1">
   </div>
 
@@ -34,9 +34,9 @@
     </div>
     <div class="col-md-8">
       <div class="idea-wrapper">
-        <h3 class="idea-title">{{ idea.title }}</h3>
-        <h5 class="idea-description">{{ idea.text | limitTo: 130 }}{{ idea.text.length > 130 ? '...' : ''}}</h5>
-        <p class="timestamp-author">Submitted {{ idea.created_at | moment }} by {{ idea.created_by }}</p>
+        <h3 class="idea-title">{{ board.boardName }}</h3>
+        <h5 class="idea-description">{{ board.caption | limitTo: 130 }}{{ board.caption.length > 130 ? '...' : ''}}</h5>
+        <p class="timestamp-author">Submitted {{ board.created_at | moment }} by {{ board.created_by }}</p>
       </div>
     </div>
     <div class="col-md-1 ">
