--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -1,51 +1,54 @@
-<div class="jumbotron jumbo-top" ng-controller="BoardsCtrl as ictrl">
-  <h1 class="animated fadeInUp">Freedom isn't free</h1>
-  <form class="navbar-form navbar-middle" ng-submit="ictrl.submitBoard()">
+<div ng-controller="BoardsCtrl as ictrl">
+  <div class="jumbotron jumbo-top">
+    <h1 class="animated fadeInUp">Freedom isn't free</h1>
+    <form class="navbar-form navbar-middle" ng-submit="ictrl.submitBoard()">
 
-    <!-- Enter Board -->
-    <div class="form-idea animated fadeInUp">
-      <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter topic here" ng-model="ictrl.board.boardName" required>
-    </div>
-    
-    <!-- Enter Description -->
-    <div ng-if="ictrl.submitted" class="form-description ng-cloak">
-      <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter caption here" ng-model="ictrl.board.caption"></textarea>
-    </div>
+      <!-- Enter Board -->
+      <div class="form-idea animated fadeInUp">
+        <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter topic here" ng-model="ictrl.board.boardName" required>
+      </div>
+      
+      <!-- Enter Description -->
+      <div ng-if="ictrl.submitted" class="form-description ng-cloak">
+        <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter caption here" ng-model="ictrl.board.caption"></textarea>
+      </div>
 
-    <button type="submit" class="btn btn-default idea-submit-button animated fadeInUp">Submit</button>
-  </form>
-</div>
-
-<!-- User Feedback Message Area -->
-<div class="user-feedback-container ng-cloak post-idea-animation" ng-if="ictrl.postSuccess" ng-click="ictrl.postSuccess = !ictrl.postSuccess">
-  <span class="post-idea-success">Your idea has been posted.</span>
-</div>
-
-<!-- Board Row -->
-<div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="board in ictrl.data.boards track by board._id"> 
-  <div class="col-md-1">
+      <button type="submit" class="btn btn-default idea-submit-button animated fadeInUp">Submit</button>
+    </form>
   </div>
 
-  <div class="idea-container">
-    <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
-      <i class="fa fa-sort-asc" ng-click="vctrl.upvote(idea)"></i> <!-- upvote -->
-      <div class="vote-points">{{ idea.votes }}</div>
-      <i class="fa fa-sort-desc" ng-click="vctrl.downvote(idea)"></i> <!-- downvote -->
-    </div>
-    <div class="col-md-8">
-      <div class="idea-wrapper">
-        <h3 class="idea-title">{{ board.boardName }}</h3>
-        <h5 class="idea-description">{{ board.caption | limitTo: 130 }}{{ board.caption.length > 130 ? '...' : ''}}</h5>
-        <p class="timestamp-author">Submitted {{ board.created_at | moment }} by {{ board.created_by }}</p>
-      </div>
-    </div>
-    <div class="col-md-1 ">
-      <div class="comments-wrapper">
-        <i class="fa fa-comments"></i>
-        <p class="comments-amount">532</p>
-      </div>
-    </div>
+  <!-- User Feedback Message Area -->
+  <div class="user-feedback-container ng-cloak post-idea-animation" ng-if="ictrl.postSuccess" ng-click="ictrl.postSuccess = !ictrl.postSuccess">
+    <span class="post-idea-success">Your idea has been posted.</span>
   </div>
-  <div class="col-md-1">
+
+  <!-- Board Row -->
+  <div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="board in ictrl.data.boards track by board._id"> 
+    <div class="col-md-1">
+    </div>
+
+    <div class="idea-container">
+      <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
+        <i class="fa fa-sort-asc" ng-click="vctrl.upvote(idea)"></i> <!-- upvote -->
+        <div class="vote-points">{{ board.votes }}</div>
+        <i class="fa fa-sort-desc" ng-click="vctrl.downvote(idea)"></i> 
+        <!-- downvote -->
+      </div>
+      <div class="col-md-8">
+        <div class="idea-wrapper">
+          <h3 class="idea-title">{{ board.boardName }}</h3>
+          <h5 class="idea-description">{{ board.caption | limitTo: 130 }}{{ board.caption.length > 130 ? '...' : ''}}</h5>
+          <p class="timestamp-author">Submitted {{ board.created_at | moment }} by {{ board.created_by }}</p>
+        </div>
+      </div>
+      <div class="col-md-1 ">
+        <div class="comments-wrapper">
+          <i class="fa fa-comments"></i>
+          <p class="comments-amount">532</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-1">
+    </div>
   </div>
 </div>
