(add) click on board routes to ideas
A click on a board will route page to ideas.html with the current
board as a url paramater.

glint.js: add route for ideas

boards.html: call bctrl.loadIdeas with ng-click

boards.js: add function loadIdeas, which redirects to ideas with
  current board as a paramater.

--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -1,16 +1,16 @@
-<div ng-controller="BoardsCtrl as ictrl">
+<div ng-controller="BoardsCtrl as bctrl">
   <div class="jumbotron jumbo-top">
     <h1 class="animated fadeInUp">Freedom isn't free</h1>
-    <form class="navbar-form navbar-middle" ng-submit="ictrl.submitBoard()">
+    <form class="navbar-form navbar-middle" ng-submit="bctrl.submitBoard()">
 
       <!-- Enter Board -->
       <div class="form-idea animated fadeInUp">
-        <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter topic here" ng-model="ictrl.board.boardName" required>
+        <input name="idea-input" type="text" class="form-control form-title-control" placeholder="Enter topic here" ng-model="bctrl.board.boardName" required>
       </div>
       
       <!-- Enter Description -->
-      <div ng-if="ictrl.submitted" class="form-description ng-cloak">
-        <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter caption here" ng-model="ictrl.board.caption"></textarea>
+      <div ng-if="bctrl.submitted" class="form-description ng-cloak">
+        <textarea name="description-input" rows="3" class="form-control form-description-control" placeholder="Enter caption here" ng-model="bctrl.board.caption"></textarea>
       </div>
 
       <button type="submit" class="btn btn-default idea-submit-button animated fadeInUp">Submit</button>
@@ -18,12 +18,12 @@
   </div>
 
   <!-- User Feedback Message Area -->
-  <div class="user-feedback-container ng-cloak post-idea-animation" ng-if="ictrl.postSuccess" ng-click="ictrl.postSuccess = !ictrl.postSuccess">
-    <span class="post-idea-success">Your idea has been posted.</span>
+  <div class="user-feedback-container ng-cloak post-idea-animation" ng-if="bctrl.postSuccess" ng-click="bctrl.postSuccess = !bctrl.postSuccess">
+    <span class="post-idea-success">Your topic has been created.</span>
   </div>
 
   <!-- Board Row -->
-  <div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="board in ictrl.data.boards track by board._id"> 
+  <div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="board in bctrl.data.boards track by board._id"> 
     <div class="col-md-1">
     </div>
 
@@ -36,7 +36,7 @@
       </div>
       <div class="col-md-8">
         <div class="idea-wrapper">
-          <h3 class="idea-title">{{ board.boardName }}</h3>
+          <h3 class="idea-title" ng-click="bctrl.loadIdeas(board)">{{ board.boardName }}</h3>
           <h5 class="idea-description">{{ board.caption | limitTo: 130 }}{{ board.caption.length > 130 ? '...' : ''}}</h5>
           <p class="timestamp-author">Submitted {{ board.created_at | moment }} by {{ board.created_by }}</p>
         </div>
