(refactor) board selectors to be distinct from ideas
'messages' count represents number of ideas

'vote count' reperesents board-views (does not function)

--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -29,10 +29,8 @@
 
     <div class="idea-container">
       <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
-        <i class="fa fa-sort-asc" ng-click="vctrl.upvote(idea)"></i> <!-- upvote -->
-        <div class="vote-points">{{ board.votes }}</div>
-        <i class="fa fa-sort-desc" ng-click="vctrl.downvote(idea)"></i> 
-        <!-- downvote -->
+        <div>Views:</div>
+        <div class="vote-points">{{ board.views }}</div>
       </div>
       <div class="col-md-8">
         <div class="idea-wrapper">
@@ -44,7 +42,7 @@
       <div class="col-md-1 ">
         <div class="comments-wrapper">
           <i class="fa fa-comments"></i>
-          <p class="comments-amount">532</p>
+          <p class="comments-amount">{{ board.ideas.length }}</p>
         </div>
       </div>
     </div>
