--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-md-1 ">
         <div class="comments-wrapper">
-          <i class="fa fa-comments"></i>
+          <i class="fa fa-lightbulb-o"></i>
           <p class="comments-amount">{{ board.ideas.length }}</p>
         </div>
       </div>
