--- a/client/index.html
+++ b/client/index.html
@@ -20,12 +20,13 @@
           <a class="glint-logo-icon" href="#/"><img src="assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
         <li class="tagline">'Free $peech'</li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" ng-controller="AuthCtrl as actrl">
       
         <!-- <li><a href="#">User</a></li> -->
 <!--         <li><a href="#">Messages</a></li>
  -->        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
+        <li><a class ="logout" href="#/logout" ng-click="actrl.logout()">Logout</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
       </ul>
     </div>
