inches from working client side auth

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
 <!--         <li><a href="#">Messages</a></li>
  -->        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
-        <li><a class ="logout" href="#/logout" ng-click="actrl.logout()">Logout</a></li>
+        <li><a class ="logout" href="#/signout" ng-click="actrl.signout()">Logout</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
       </ul>
     </div>
