(add) class to h1 div to allow recoloring divs

--- a/client/app/boards/boards.html
+++ b/client/app/boards/boards.html
@@ -1,6 +1,6 @@
 <div ng-controller="BoardsCtrl as bctrl">
   <div class="jumbotron jumbo-top">
-    <h1 class="animated fadeInUp">Freedom isn't free</h1>
+    <h1 class="animated fadeInUp title-text">Freedom isn't free</h1>
     <form class="navbar-form navbar-middle" ng-submit="bctrl.submitBoard()">
 
       <!-- Enter Board -->
