--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -1,6 +1,6 @@
 <div ng-controller="IdeasCtrl as ictrl">
   <div class="jumbotron jumbo-top">
-    <h1 class="animated fadeInUp">Buy up votes</h1>
+    <h1 class="animated fadeInUp title-text">Buy up votes</h1>
     <form class="navbar-form navbar-middle" ng-submit="ictrl.submitIdea()">
 
       <!-- Enter Idea -->
