(add) navbar moves with page, styling for navbar

--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body ng-app="glint">
-  <nav class="container-fluid nav-bar-custom">
+  <nav class="container-fluid nav-bar-custom navbar-fixed-top">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <li class="nav-logo">
-          <a class="glint-logo-icon" href="#/"><img src="assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
+          <a class="glint-logo-icon" href="#/"><img src="assets/congress-small-logo.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
         <li class="tagline">'Free $peech'</li>
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="AuthCtrl as actrl">
