--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -41,10 +41,10 @@
         </div>
       </div>
       <div class="col-md-1 ">
-        <div class="comments-wrapper">
+     <!--    <div class="comments-wrapper">
           <i class="fa fa-comments"></i>
           <p class="comments-amount">532</p>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="col-md-1">
