(refactor) front-end to end-product presentation
fix nav-bar tagline

CSS styling for background and jumbotron

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav navbar-left">
         <li class="nav-logo">
           <a class="glint-logo-icon" href="#/"><img src="assets/congress-small-logo.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
-        <li class="tagline">'Free $peech'</li>
+        <li class="tagline">"Free" $peech</li>
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="AuthCtrl as actrl">
       
