(refactor) only show login failure message in login.html when loginFailure is true in AuthCtrl

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -4,7 +4,7 @@
     <form class="form-signin" name="signinForm" ng-submit="signinForm.$valid && actrl.signin()" /novalidate>
       <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
       
-      <div class="loginFailure">Unconstitutional username/password
+      <div ng-show="loginFailure" class="loginFailure">Unconstitutional username/password
       </div>
 
       <label for="inputUsername" class="sr-only">Email address</label>
