--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -4,9 +4,6 @@
     <form class="form-signin" name="signinForm" ng-submit="signinForm.$valid && actrl.signin()" /novalidate>
       <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
       
-      <div ng-show="loginFailure" class="loginFailure">Unconstitutional username/password
-      </div>
-
       <label for="inputUsername" class="sr-only">Email address</label>
       <p class="error" ng-show="signinForm.username.$error.required">Required Field</p>
       <input type="text" name="username" ng-model="actrl.user.username" id="inputUsername" class="form-control login-form-input" placeholder="Username" required autofocus>
@@ -17,6 +14,15 @@
       
       <button class="btn btn-lg btn-primary btn-block login-button" type="submit" ng-disable="signinForm.$invalid">Login</button>
       <p class="sign-up-here">Not registered? Sign up <a href="#/signup">here</a></p>
+
+      <div ng-show="loginFailure" class="login-failure">!
+      </div>
+
+      <div ng-show="loginPasswordFailure" class="login-failure">Unconstitutional Username
+      </div>
+      <div ng-show="loginUsernameFailure" class="login-failure">Unconstitutional Password
+      </div>
+
     </form>
   </div>
   <div class="col-md-4"></div>
