--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -15,9 +15,9 @@
       <button class="btn btn-lg btn-primary btn-block login-button" type="submit" ng-disable="signinForm.$invalid">Login</button>
       <p class="sign-up-here">Not registered? Sign up <a href="#/signup">here</a></p>
 
-      <div ng-show="loginPasswordFailure" class="login-failure">Unconstitutional Username
+      <div ng-show="loginPasswordFailure" class="login-failure animated fadeInUp">Unconstitutional Password
       </div>
-      <div ng-show="loginUsernameFailure" class="login-failure">Unconstitutional Password
+      <div ng-show="loginUsernameFailure" class="login-failure animated fadeInUp">Unconstitutional Username
       </div>
 
     </form>
