--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,9 @@
       <ul class="nav navbar-nav navbar-right" ng-controller="AuthCtrl as actrl">
       
         <!-- <li><a href="#">User</a></li> -->
-<!--         <li><a href="#">Messages</a></li>
- -->        <li><a href="http://MysteriousSailboat.github.io/glint/">About</a></li>
+
+        <!--<li><a href="#">Messages</a></li>-->
+        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
         <li><a class ="logout" href="#/signout" ng-click="actrl.signout()">Logout</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
