(feat) add signup error message on screen when user tries to regist a taken username

--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -14,6 +14,10 @@
 
       <button class="btn btn-lg btn-primary btn-block login-button" type="submit" ng-disable="signupForm.$invalid">Sign up</button>
       <p class="sign-up-here">Already registered? Login <a href="#/login">here</a></p>
+
+      <div ng-if="userNameExists" class="animate-if innerContainer">Precedented Username
+      </div>
+
     </form>
   </div>
   <div class="col-md-4"></div>
