(refactor) reimplement without using  in authControl

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -18,9 +18,9 @@
       <div class="outer">
 <!--         <div ng-if="loginPasswordFailure && loginUsernameFailure" class="animate-if innerContainer">Unconstitutional Username/Password
         </div> -->
-        <div ng-if="loginPasswordFailure && !loginUsernameFailure" class="animate-if innerContainer">Unconstitutional Password
+        <div ng-if="actrl.loginPasswordFailure && !actrl.loginUsernameFailure" class="animate-if innerContainer">Unconstitutional Password
         </div>
-        <div ng-if="loginUsernameFailure && !loginPasswordFailure" class="animate-if innerContainer">Unconstitutional Username
+        <div ng-if="actrl.loginUsernameFailure && !actrl.loginPasswordFailure" class="animate-if innerContainer">Unconstitutional Username
         </div>
       </div>
 
