--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -15,7 +15,7 @@
       <button class="btn btn-lg btn-primary btn-block login-button" type="submit" ng-disable="signupForm.$invalid">Sign up</button>
       <p class="sign-up-here">Already registered? Login <a href="#/login">here</a></p>
 
-      <div ng-if="userNameExists" class="animate-if innerContainer">Precedented Username
+      <div ng-if="actrl.userNameExists" class="animate-if innerContainer">Precedented Username
       </div>
 
     </form>
