--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -2,7 +2,8 @@
   <div class="col-md-4"></div>
   <div class="col-md-4 login-form" ng-controller="AuthCtrl as actrl">
     <form class="form-signin" name="signinForm" ng-submit="signinForm.$valid && actrl.signin()" /novalidate>
-      <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
+      <!-- <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt=""> -->
+      <div class="name-large">Congre$$</div>
       
       <label for="inputUsername" class="sr-only">Email address</label>
       <p class="error" ng-show="signinForm.username.$error.required">Required Field</p>
