--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -2,7 +2,8 @@
   <div class="col-md-4"></div>
   <div class="col-md-4 login-form" ng-controller="AuthCtrl as actrl">
     <form class="form-signin" name="signupForm" ng-submit="signupForm.$valid && actrl.signup()" /novalidate>
-      <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
+      <!-- <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt=""> -->
+      <div class="name-large">Congre$$</div>
 
       <label for="inputEmail" class="sr-only">Email address</label>
       <p class="error" ng-show="signupForm.username.$error.required">Required Field</p>
