--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       
         <!-- <li><a href="#">User</a></li> -->
 
+        <li><a href="#" ng-click="actrl.test()">{{ actrl.localAccess.username }} : </a></li>
         <!--<li><a href="#">Messages</a></li>-->
         <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
