--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -26,11 +26,13 @@
   <div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="idea in ictrl.data.ideas track by idea._id"> 
     <div class="col-md-1">
     </div>
-
+    <div>
+    </div>
     <div class="idea-container">
       <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
-      <img src="../assets/dollarSign.jpeg" ng-if="idea.displayDollarSign"></img>
-      <img src="../assets/stockDown.png" ng-if="idea.displayStockDown"></img>
+      
+
+        
         <i class="fa fa-sort-asc" ng-click="vctrl.upvote(idea)"></i> <!-- upvote -->
         <div class="vote-points">{{ idea.votes }}</div>
         <i class="fa fa-sort-desc" ng-click="vctrl.downvote(idea)"></i> <!-- downvote -->
@@ -43,10 +45,9 @@
         </div>
       </div>
       <div class="col-md-1 ">
-     <!--    <div class="comments-wrapper">
-          <i class="fa fa-comments"></i>
-          <p class="comments-amount">532</p>
-        </div> -->
+        <div class="upvote " ng-style="idea.upVoteSize"></div>
+        <div class="downvote " ng-style="idea.downVoteSize"></div>
+   
       </div>
     </div>
 
