--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -1,3 +1,6 @@
+<div ng-controller="VotesCtrl as vctrl" class="no-votes" ng-if="vctrl.noVotes">
+</div>
+
 <div ng-controller="IdeasCtrl as ictrl">
   <div class="jumbotron jumbo-top">
     <h1 class="animated fadeInUp title-text">Buy up votes</h1>
