--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>Glint</title>
+  	<title>Congre$$</title>
   	<link rel="stylesheet" href="styles.css">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -16,10 +16,11 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron">
-      <img src="assets/glint-large-white.png" alt="Glint">
-      <h2>Where programmers meet ideas</h2>
+      <!-- <img src="assets/glint-large-white.png" alt="Glint"> -->
+      <h1>Congre$$</h1>
+      <h2>Buy up votes</h2>
       <div class="lead">
-        <a href="http://glintapp.azurewebsites.net/" class="btn btn-outline-inverse btn-lg visit-button">Use Glint</a>
+        <a href="http://glintapp.azurewebsites.net/" class="btn btn-outline-inverse btn-lg visit-button">Join Congre$$</a>
         <a href="docs/glint.html" target="_blank" class="btn btn-outline-inverse btn-lg visit-button">View Docs</a>
       </div>
       <div class="github-buttons">
@@ -29,10 +30,10 @@
     
     <!-- Header -->
     <div class="row basic-summary">
-      <h1 class="basic-summary-bold">Find the next big idea!</h1>
+      <h1 class="basic-summary-bold">Buy into the next big idea!</h1>
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        <h3>A place for people looking for ideas and ideas looking for people.</h3>
+        <h3>A place for people looking for ideas and ideas looking for profit.</h3>
       </div>
       <div class="col-md-2"></div>
     </div>
@@ -44,18 +45,18 @@
       <div class="icons-wrapper">
         <div class="col-md-4">
           <i class="fa fa-code fa-5x"></i>
-          <h3>You're looking for a great idea.</h3>
-          <p>You need a project to learn a new language or start a new company, but you don't know what to make You need a project to focus on, maybe something that could turn into a company. Glint has great ideas you can make while learning something new!<make class=""></make></p>
+          <h3>You're looking to influence policy.</h3>
+          <p>You need to have a say in this country's affairs, but you don't know where to spread your lobbying funds. You need a project to focus on, maybe something that could turn into a war. Congre$$ has great ideas you can view while learning what the competition is trying to push!<make class=""></make></p>
         </div>
         <div class="col-md-4">
           <i class="fa fa-lightbulb-o fa-5x"></i>
           <h3>You have an amazing idea.</h3>
-          <p>You have a great idea, but you don't even know where to get started making it happen. Collaborate with other passionate people to make your idea a reality!</p>
+          <p>You have a great idea, but you don't even know where to get started making it happen. Collaborate with other passionate people put your idea up for debate!</p>
         </div>
         <div class="col-md-4">
          <i class="fa fa-share-alt fa-5x"></i>
          <h3>You want to give back.</h3>
-         <p>You have ideas filling up notebook after notebook, but much less time to execute on them. Help inspire others by sharing your ideas for other developers to work on and discuss!</p>
+         <p>You have ideas filling up notebook after notebook, but no lobbyists nearby. Help inspire others by sharing your ideas for other super PACs to downvote to oblivion!</p>
         </div>
       </div>
     </div>
