(refactor) adjust page to work for organization repository

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
       
         <!-- <li><a href="#">User</a></li> -->
 <!--         <li><a href="#">Messages</a></li>
- -->        <li><a href="http://MichaelRoberts214.github.io/glint/">About</a></li>
+ -->        <li><a href="http://MysteriousSailboat.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
         <li><a class ="logout" href="#/signout" ng-click="actrl.signout()">Logout</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
