(refactor) add CongreSS team to about page

--- a/index.html
+++ b/index.html
@@ -107,9 +107,40 @@
       </div>
     </div>
 
+    <div class="row team-row">
+      <div class="glint-team">
+        <h1>The Congre$$ Team</h1>
+        <br>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="https://avatars2.githubusercontent.com/u/9373445?v=3&s=400" alt="">
+          <h3 class="glint-name">Chad Fong</h3>
+          <h4>Project Manager</h4>
+          <p>"This is my clever quote"</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="https://avatars0.githubusercontent.com/u/5791011?v=3&s=400" alt="">
+          <h3 class="glint-name">David Hammer</h3>
+          <h4>Hammer Time</h4>
+          <p>"They call me Cute Cat"</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="https://avatars2.githubusercontent.com/u/8903013?v=3&s=400" alt="">
+          <h3 class="glint-name">Tony Johnson</h3>
+          <h4>Principle Developer</h4>
+          <p>"Let's do a podcast"</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="https://avatars1.githubusercontent.com/u/9329689?v=3&s=460" alt="">
+          <h3 class="glint-name">Michael Roberts</h3>
+          <h4>Scrum Master</h4>
+          <p>"Not with that attitude"</p>
+        </div>    
+      </div>
+    </div>
+
     <nav class="navbar navbar-default navbar-bottom" role="navigation">
       <div class="row footer-bottom">
-        <div class="github-footer-link"><a href="https://github.com/adventurous-starfish/glint" target="_blank"><i class="fa fa-github fa-4x"></i></a></div>
+        <div class="github-footer-link"><a href="https://github.com/MysteriousSailboat/glint" target="_blank"><i class="fa fa-github fa-4x"></i></a></div>
       </div>
     </nav>
 
