(refactor) change fork button to MysteriousSailboat

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="docs/glint.html" target="_blank" class="btn btn-outline-inverse btn-lg visit-button">View Docs</a>
       </div>
       <div class="github-buttons">
-        <iframe src="https://ghbtns.com/github-btn.html?user=adventurous-starfish&repo=glint&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=MysteriousSailboat&repo=glint&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
       </div>
     </div>
     
