(add) ghetto rush gogogo commit

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="AuthCtrl as actrl">
       
-        <!-- <li><a href="#">User</a></li> -->
 
-        <li><a href="#" ng-click="actrl.test()">{{ actrl.localAccess.username }} : </a></li>
-        <!--<li><a href="#">Messages</a></li>-->
+        <li><a ng-click="actrl.buyVotes()">Buy 100 Votes!</a></li>
+        <li><a ng-click="actrl.test()">{{ localVars.username }}{{ localVars.votes }} </a></li>
         <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
         <li><a class ="logout" href="#/signout" ng-click="actrl.signout()">Logout</a></li>
